--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 </main>
 <footer>
-    <p>&copy; 2024 Your Name</p>
+    <p>&copy; 2024 Aritro Bhattacharya</p>
 </footer>
 <script src="script.js"></script>
 </body>
